Services S-1 甲：离线通知代际号按连接递增，关死残余窗口
问题：e438be9c0 修复后仍有残余窗口——延迟通知已在发送中时重连恰好落地，
取消与活会话检查均已过去，flap 不改代际号、接收端放行，活服务器被误接管。

方案：offlineRegister 参数改工厂（Supplier），启动与重连统一执行：工厂内
bump 共享库代际号并构造参数，在途旧代际通知被接收端"已经活过来了"分支拒绝。
窗口缩至"接收者读库之后才落地的重连"，与既有送达竞态同类，即事实边界。
零协议变更、混布安全（旧客户端不多不少保持现状）。

变更：
- AbstractAgent/Agent/AgentWithRaft：offlineRegister 签名工厂化，重连重放调工厂
- CsQueue/Timer：bump 事务挪进工厂闭包（启动行为不变，仍 bump 一次）
- AgentWithRaft：补断线重放（S-3 遗留）——Login 成功后异步重放
  离线注册/注册/订阅，服务端幂等

测试：test4 红绿（重连重放执行工厂、服务端登记 serial==2）；
TestCsQueue 补旧代际拒绝分支（此前零覆盖）。
门禁：test+integrationTest 全绿